[package]
name = "my_custom_redis"
version = "0.1.0"
edition = "2024"

[dependencies]
# 1. 버전을 '='를 사용하여 엄격하게 고정합니다.
rand = "=0.8.5"
rand_distr = "=0.4.3"
half = "=2.4.1"
reqwest = { version = "0.11", features = ["json"] }

# 2. Candle 관련 의존성
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"

# 3. 기타 의존성
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokenizers = "0.15.0"
bincode = "1.3.3"
once_cell = "1.21.4"
async-trait = "0.1.89"